home/static/home/styles/imports/_navbar-styles.scss
.navbar-wrapper {
    background: $site-background;
    margin-bottom: 3rem;
    &-header { position: relative; }
}
.navbar {
    background: $site-background;
    @include mq("desktop") { padding: 0 0 !important; } //Desktop does not need extra padding
 }

//LOGO
.navbar-wrapper-header .logo svg g { fill: $site-header; }
.navbar .logo svg g { fill: $site-header; }

//NAV-LINKS
.navbar .nav-link {
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 0.125rem;

    font: bold 0.9rem $site-header-font;
    color: $navbar-unactive-link;

    &:hover{
        background: $navbar-active-link;
        color: $site-white !important; }
}
.navbar .active .nav-link { color: $navbar-active-link; }

// NAVBAR ANIMATION
.logo, .lead, .navbar .nav-link { transition: all 0.3s ease; }
.not-scrolled {
    .logo { width: 50%; }
    .lead {
        height: auto;
        margin-bottom: 0.75rem; }
    .navbar .nav-link {
        padding: 10px 15px;
        border-bottom: 2px solid gray; }
}
.scrolled {
    box-shadow: 0 0 10px 2px rgba(0,0,0,.4);
    .logo { width: 30%; }
    .lead {
        height: 0px;
        margin-bottom: 0; }
    .navbar { border-bottom: 2px solid gray; }
    .navbar .nav-link { padding: 4px 15px; }
}

//SEARCH BUTTON
#search {
    position: absolute;
    right: 0;
    z-index: 1;
}
#search button {
    height: 100%;
    border: none;

    display: inline;
    padding: 0 10% 0 10px;

    text-transform: uppercase;
    font: bold 1rem $site-header-font;

    background: transparent;
    color: $site-red;
    &:hover {
        text-decoration: none;
        cursor: pointer;
    }
    &:active, &:focus {
        outline: 0;
        border: none;
        -moz-outline-style: none;
    }
}
//SEARCH MODAL
#searchModal {
    .modal-dialog {
        position: fixed;
        margin: 0;
        width: 100%;
        height: 100%;
        padding: 0;
        max-width: 100%;
    }
    .modal-content {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        border-radius: 0;
        box-shadow: none;
    }
    .modal-body {
        position: absolute;
        width: 100%;
        font-weight: 300;
        overflow: auto;
    }
    #modal-close-btn {
        position: absolute;
        right: 0;
        margin: 2rem;

        border: none;
        background: none;
        cursor: pointer;

        font-size: 2rem;
        color: $site-red;
    }
    .modal-search-form {
        position: relative;
        width: 75%;
        margin-top: 25%;
        margin-right: auto;
        margin-left: auto;
        .modal-search-input {
            display: inline-block;
            width: calc(100% - 50px);
            height: 20px;
            border: 3px solid $site-red;
            padding: 20px;

            &:focus {
                outline: none;
                color: $site-red;
            }
        }
        .modal-search-submit {
            position: absolute;
            right: 0;
            display: inline-block;
            width: 50px;
            height: 46px;
            border: 1px solid $site-red;

            background: $site-red;
            color: $site-background;
            text-align: center;
            cursor: pointer;
        }
    }
}

